--- a/share_your_travels.html
+++ b/share_your_travels.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en">
-        <title>Share your Travels</title>
-        <h1> Share your travels</h1>
-        <h2>New York - Central Park</h2>
-        <p>Photo by Randy Connolly</p>
-    
-        <img src="file:///C:/Users/amith/Downloads/central-park%20(1).jpg" alt="Image not found">
-        <p> This photo of conservatory pond in <a href ="http://www.centralpark.com/">Central Park</a> New York city was taken on October 22,2011 with a <b> Cannon EOS 30D</b> camera.  </p>
-        <h2>Reviews</h2>
-        <p>By Ricardo on September 15,2015 <br><br>
-        Easy on the HDR buddy.</p>
-        <hr>
-        <p>By Susan on October 1,2015 <br><br>
-        I love Central Park.
-       </p>
-       <hr>
-       <p>Copyright  &copy; 2015 Share Your Travels</p>
+<html lang="en">
+<head>
+    <title> Share your Travels </title>
+</head>
+<body>
+    <header>
+        <h1>Share your travels</h1>
+    </header>
 
-    </head>
+    <main>
+        <div id="content">
+            <h2>New York - Central Park</h2>
+            <p>Photo by Randy Connolly</p>
+
+            <img src="file:///C:/Users/amith/Downloads/central-park%20(1).jpg" alt="Image not found">
+
+            <p>This photo of conservatory pond in <a href="http://www.centralpark.com/">Central Park</a> New York City was taken on October 22, 2011 with a <b>Cannon EOS 30D</b> camera.</p>
+        </div>
+
+        <div id="reviews">
+            <h2>Reviews</h2>
+            <article>
+                <p>By Ricardo on September 15, 2015</p>
+                <p>Easy on the HDR buddy.</p>
+            </article>
+
+            <hr>
+
+            <article>
+                <p>By Susan on October 1, 2015</p>
+                <p>I love Central Park</p>
+            </article>
+
+            <hr>
+        </div>
+
+        <footer>
+            <p>Copyright &copy; 2015 Share Your Travels</p>
+        </footer>
+    </main>
+</body>
 </html>
